fix: make import button on mobile redirect to login if no user

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -117,3 +117,8 @@ html {
         display: none;
     }
 }
+
+.disabled {
+    cursor: default;
+    color: gray;
+}
